--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -555,8 +555,7 @@ definitions:
       gender:
         type: string
       birthDate:
-        type: integer
-        format: int64
+        type: string
       raceConceptId:
         type: integer
         format: int64
