--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -494,7 +494,7 @@ definitions:
 
   ParticipantCohortStatusColumns:
     type: string
-    enum: [participantId, status, gender, birthDate, race, ethnicity]
+    enum: [PARTICIPANTID, STATUS, GENDER, BIRTHDATE, RACE, ETHNICITY]
 
   ReviewColumns:
     type: string
