Adding concept search

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.datasource.max-idle=5
 spring.datasource.min-idle=1
 
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.pmiops.workbench.cdr.MySQLDialect
