--- a/api/src/test/resources/application.properties
+++ b/api/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.pmiops.workbench.test.TestDialect
