Adding CDR version setup stuff, using workspace name and namespace
Switching MySQLDialect inheritance, see if that fixes things outside tests

--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -86,6 +86,16 @@ paths:
 
         operationId: "searchConcepts"
         parameters:
+          - in: path
+            name: workspaceNamespace
+            description: The namespace of the workspace for which concepts are being looked up.
+            required: true
+            type: string
+          - in: path
+            name: workspaceId
+            description: The ID of the workspace for which concepts are being looked up.
+            required: true
+            type: string
           - in: query
             name: query
             type: string
